--- a/Week 1 Assignment /py-if-else task.ipynb
+++ b/Week 1 Assignment /py-if-else task.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "01c7d418-83e3-4e97-84c1-9b4016fd0392",
+   "metadata": {},
+   "source": [
+    "- Manan Pujara\n",
+    "- hackerrank url : \n",
+    "- My Submission : https://www.hackerrank.com/submissions/all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "087b14a5-a7ee-4db2-9251-247b219125e8",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
