--- a/Week 2 Assignment/capitalize.ipynb
+++ b/Week 2 Assignment/capitalize.ipynb
@@ -241,38 +241,17 @@
   {
    "cell_type": "markdown",
    "id": "eca93a93-aeba-4075-8693-ee59f922eb46",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Task 6 Collection.Counter "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d571800a-36d7-46b7-bd0a-9a1e45d5d4e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcollections\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Input reading\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m X = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Number of shoes\u001b[39;00m\n\u001b[32m      5\u001b[39m shoe_sizes = \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m().split()))\n\u001b[32m      6\u001b[39m N = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m())  \u001b[38;5;66;03m# Number of customers\u001b[39;00m\n",
-      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -292,36 +271,6 @@
     "        stock[size] -= 1\n",
     "        \n",
     "print(earnings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "56081d10-b3c9-4ef2-9f47-aaeb02621182",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 1\n",
-      " 2 .*\\\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "for _ in range(int(input())):\n",
-    "    try: re.compile(input()); print(True)\n",
-    "    except: print(False)\n",
-    "\n"
    ]
   },
   {
@@ -410,11 +359,52 @@
   {
    "cell_type": "markdown",
    "id": "0f96bc88-9772-4d22-a38f-48ffee683a12",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Task 8 Incorrect Regex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "99014e8d-913d-46e2-a781-a89baff439ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n",
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " **//&\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "for _ in range(int(input())):\n",
+    "    try: re.compile(input()); print(True)\n",
+    "    except: print(False)"
    ]
   },
   {
